[package]
name = "rust-tao-metal"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tao = { version = "=0.30.0", features = ["rwh_05"] }
objc2-metal = { version = "0.2.2", features = ["all"] }
objc2-metal-kit = { version = "0.2.2", features = ["all"] }
objc2-foundation = { version = "0.2.2", features = ["all"] }
objc2-app-kit = { version = "0.2.2", features = ["all"] }
objc2-quartz-core = { version = "0.2.2", features = ["all"] }
objc2 = "0.5.2"